# portfolio-evaluation

./: README.md  information.md  pyproject.toml
Portfolio/: main.ipynb  main.py  portfolio.ipynb  prtf_app.py
Portfolio_Evaluation/: main.ipynb  main.py
src/: main.ipynb  utils.py
